--- a/style-360.css
+++ b/style-360.css
@@ -310,6 +310,7 @@ margin-top: 30px;
   /* ФОТОГРАФИИ ПУТЕШЕСТВИЙ */
 
   .journey-photos__wrapper {
+    margin: 0 auto;
     width: 100%;
     max-width: 360px;
     height: auto;
@@ -362,6 +363,7 @@ margin-top: 30px;
 
   /* ИСТОРИИ ПУТЕШЕСТВИЙ */
 .journey-history__wrapper {
+  margin: 0 auto;
   max-width: 360px;
   height: 1597px;
   gap: 50px;
