--- a/style-360.css
+++ b/style-360.css
@@ -49,18 +49,15 @@
 
   /* HEADER */
   .header__wrapper {
-    min-width: 360px;
+    max-width: 360px;
+    width: 100%;
   }
 
   .header__container {
-    min-width: 317px;
-    height: 53px;
+    max-width: 317px;
+    height: auto;
     justify-content: center;
     align-items: center;
-  }
-
-  .header__list {
-    display: none;
   }
 
   .header__paragraph img {
@@ -73,16 +70,7 @@
   
   main {
     /* height: auto; */
-    height: 7994px;
-  }
-  
-  .vp-1024px {
-    width: 100%;
-    display: none;
-    position: fixed;
-    top: 0;
-    z-index: 1000;
-    height: 95px;
+    /* height: 7994px; */
   }
 
   /* PREVIEW */
@@ -93,6 +81,7 @@
   }
 
   .preview {
+    max-width: 360px;
     margin: 0 auto;
     height: 365px;
   }
@@ -103,13 +92,13 @@
   }
 
   .preview__title {
-    width: 360px;
-    height: 114px;
+    width: 100%;
+    height: auto;
   }
 
   .preview__paragraph {
-    width: 310px;
-    height: 69px;
+    width: 90%;
+    height: auto;
   }
 
   .btn-find-tour  {
