--- a/style.css
+++ b/style.css
@@ -78,6 +78,10 @@ h3 {
   letter-spacing: -0.01em;
 }
 
+a {
+  all: unset; 
+}
+
 /* HEADER */
 
 .header__ordinary {
@@ -104,7 +108,7 @@ h3 {
 
 .header__container {
   width: 100%;
-  margin: 0 20%;
+  margin: 0  calc(100vw / 5);
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -115,7 +119,7 @@ h3 {
 }
 
 .header__list {
-  width: 40%;
+  width: 45%;
 }
 
 .header-list__items {
