--- a/style-1024.css
+++ b/style-1024.css
@@ -58,20 +58,22 @@
   /* ВЫБЕРИ СВОЙ ТУР */
 
   .choose-tour-tour__wrapper {
-    width: 1000px;
-    height: 1871px;
+    max-width: 1000px;
+    width: 100%;
+    height: auto;
   }
 
   .choose-your-tour__cards {
     margin: 0 auto;
     width: calc(100% - 53px);
-    height: 1629px;
+    height: auto;
     justify-content: space-around;
   }
 
   .choose-your-tour__card {
-    width: 450px;
-    height: 531px;
+    max-width: 450px;
+    width: 100%;
+    max-height: 531px;
     border-radius: 50px;
   }
 
