--- a/style-820.css
+++ b/style-820.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 900px) and (min-width: 480px)  {
+@media screen and (max-width: 1000px) and (min-width: 480px)  {
   #wrapper {
     overflow: hidden;
   }
@@ -56,13 +56,34 @@
 
   /* ВЫБЕРИ СВОЙ ТУР */
 
-.choose-your-tour__card {
-  max-width: 800px;
-    width: 100%;
-    min-height: 970px;
+  .choose-your-tour__list {
+    margin: 0 auto;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    width: 60%;
     height: auto;
+  }
+
+
+  .choose-your-tour__cards {
+    margin: 0 auto;
+    width: calc(100% - 53px);
+    height: auto;
+    justify-content: space-around;
+  }
+
+  .choose-your-tour__card {
+    max-width: calc(90% / 2);
+    min-width: 318px;
+    max-height: 318px;
+    width: 100%;
     border-radius: 50px;
-}
+  }
+
+  .card-paragraph__container {
+    word-wrap: normal;
+    width: 100%;
+  }
 
   /* СОБЕРИ СВОЙ ТУР */
 
@@ -76,167 +97,58 @@
 
   /* ФОРМА  */
 
-  .collect-your-tour__form {
-    width: 100%;
-    height: 966px;
-  }
-
-  .form__container {
-    display: flex;
-    flex-wrap: wrap;
-    width: 798px;
-    gap: 20px;
-  }
-
-  .form__container label {
-    width: auto;
-  }
-
-  .form__container input,
-  .form__container select,
-  .form__comment textarea {
-    width: 100%;
-    max-width: 368px;
-    box-sizing: border-box;
-    padding: 20px;
-  }
-
-  .form__name,
-  .form__direction,
-  .form__email,
-  .form_tel,
-  .form__date-from,
-  .form__date-till {
-    flex: none;
-    width: 368px;
-  }
-
-  .form__comment textarea {
-    max-width: 798px;
-    width: 100%;
-  }
-
-  /* Отзывы наших путешественников */
-
-  .feedback__wrapper {
-    max-width: 1024px;
-    height: 1173px;
-    width: 100%;
-  }
-
-  .feedback__cards {
-    justify-content: center;
-    width: 100%;
-    height: 841px;
-    gap: 18px;
-  }
-
-  .feedback__card {
-    width: 450px;
-    height: 841px;
-  }
-
-  .feedback-card__person {
-    width: 370px;
-  }
-
-  /* ФОТОГРАФИИ ПУТЕШЕСТВИЙ */
-
-  .journey-photos__wrapper {
-    width: 100%;
-    max-width: 1024px;
-  }
-
-  .journey-photos__album {
-    justify-content: center;
-    max-width: 100%;
-    max-height: 963px;
-    gap: 15px;
-  }
-
-  .journey-photos__album-photo {
-    width: 314.67px;
-    height: 300px;
-    background-size: cover;
-  }
-
-  .journey-photos__album-photo:nth-child(n + 5):nth-child(-n + 9) {
-    width: 231px;
-    height: 301px;
-  }
-
-  .photo-2,
-  .photo-7,
-  .photo-13 {
-    display: none;
-  }
-
-  /* ИСТОРИИ ПУТЕШЕСТВИЙ */
-  .journey-history__wrapper {
-    max-width: 1024px;
-  }
-
-  .journey-history__cards {
-    width: 100%;
-  }
-
-  .journey-history__card {
-    margin: 0 auto;
-    width: 918px;
-  }
-
-  .journey-card-1::before,
-  .journey-card-2::before,
-  .journey-card-3::before {
-    background-size: cover;
-  }
-
-  .journey-card-1::before {
-    background: linear-gradient(
-        270deg,
-        rgba(0, 0, 0, 0) 0.01%,
-        rgba(0, 0, 0, 0.2) 100%
-      ),
-      url("./assets/story\ photo-1\ \(1024px\).jpg") no-repeat center center;
-    background-size: cover;
-  }
-
-  .journey-card-2::before {
-    background: linear-gradient(
-        270deg,
-        rgba(0, 0, 0, 0) 0.01%,
-        rgba(0, 0, 0, 0.2) 100%
-      ),
-      url("./assets/story\ photo-2\ \(1024px\).jpg") no-repeat center center;
-    background-size: cover;
-  }
-
-  .journey-card-3::before {
-    background: linear-gradient(
-        270deg,
-        rgba(0, 0, 0, 0) 0.01%,
-        rgba(0, 0, 0, 0.2) 100%
-      ),
-      url("./assets/story\ photo-3\ \(1024px\).jpg") no-repeat center center;
-    background-size: cover;
-  }
-
-  .journey-history__card-container {
-    gap: 50px;
-  }
-
-  .card__paragraph {
-    width: 100%;
-  }
 
   /* FOOTER */
   .footer__container {
     max-width: 910px;
     width: 100%;
     margin: 0 calc(100vw / 20);
+    flex-wrap: wrap;
+    justify-content: center;
   }
 
   .footer-list__icons {
     max-width: 419px;
+  }
+}
+@media screen and (max-width: 820px) {
+  h1 {
+    font-size: 34px;
+    font-weight: 700;
+    line-height: 38.08px;
+    letter-spacing: 0.02em;
+  }
+
+  h2 {
+    font-size: 34px;
+    font-weight: 700;
+    line-height: 38.08px;
+    letter-spacing: 0.02em;
+  }
+
+  h3 {
+    font-size: 23px;
+    font-weight: 700;
+    line-height: 27.6px;
+    letter-spacing: 0.04em;
+  }
+
+  .p-big {
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 22.72px;
+  }
+
+  .p-normal {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 22.72px;
+  }
+
+  .p-small {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 22.72px;
+    letter-spacing: -0.01em;
   }
 }
